--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "feedparser (>=6.0.11,<7.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "aiogram (>=3.20.0.post0,<4.0.0)",
-    "pytest (>=8.4.0,<9.0.0)"
+    "pytest (>=8.4.0,<9.0.0)",
+    "sqlalchemy (>=2.0.41,<3.0.0)"
 ]
 
 
