--- a/.env
+++ b/.env
@@ -3,3 +3,10 @@ USER=postgres
 PASSWORD=admin123
 HOST=localhost
 PORT=5432
+
+
+
+API_ID=28715516
+API_HASH=5a6ada274693c8e1b0652fab3afc8d3e
+PHONE=+79956870545
+LOGIN=user-app
