--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "aiogram (>=3.20.0.post0,<4.0.0)",
     "pytest (>=8.4.0,<9.0.0)",
-    "sqlalchemy (>=2.0.41,<3.0.0)"
+    "sqlalchemy (>=2.0.41,<3.0.0)",
+    "pyrogram (>=2.0.106,<3.0.0) ; python_version >= \"3.7\" and python_version < \"4.0\"",
+    "python-decouple (>=3.8,<4.0)",
+    "tgcrypto (>=1.2.5,<2.0.0) ; python_version >= \"3.7\" and python_version < \"4.0\"",
 ]
 
 
