--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DBNAME=robot_admin
+DB_NAME=robot_admin
 USER=postgres
 PASSWORD=123
-HOST=localhost
-PORT=5432
+HOST_NAME=localhost
+PORT_NAME=5432
