--- a/.env
+++ b/.env
@@ -1,12 +1,16 @@
-DBNAME=robot_admin
-USER=postgres
-PASSWORD=123
-HOST=localhost
-PORT=5432
-
+DB_HOST=127.0.0.1
+DB_USER=SANAK
+DB_PASSWORD=SANAK
+DB_NAME=zilant_bot
+DB_PORT=5432
 
 
 API_ID=28715516
 API_HASH=5a6ada274693c8e1b0652fab3afc8d3e
 PHONE=+79956870545
 LOGIN=user-app
+
+
+
+SECRET_KEY=0d18ce545258fc5ac56e2d0462c235505b837d9c
+JWT_SECRET_KEY=0d18ce545258fc5ac56e2d0462c235505b837d9c
