--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "schedule (>=1.2.2,<2.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
+    "flask-cors (>=6.0.1,<7.0.0)",
+    "langchain-core (>=0.3.67,<0.4.0)",
+    "langchain-gigachat (>=0.3.11,<0.4.0)",
 ]
 
 
